--- a/lab3/.vscode/settings.json
+++ b/lab3/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.pythonPath": "/usr/local/bin/python3.6",
-    "python.linting.enabled": false
+    "python.linting.enabled": false,
+    "python.formatting.provider": "autopep8"
 }
